# fullstack-template

./: Readme.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/actions/cluster-setup/: action.yml
.github/workflows/: pr-commit.yml  pr-merge-main.yml  pr-merge-prod.yml
backend/: Cargo.toml
backend/api-test-helper/: Dockerfile  Readme.md
backend/db-app/: Cargo.toml  Dockerfile
backend/fullstack-api/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/fullstack-api/src/: main.rs
backend/fullstack-api/src/app/: app_router.rs  mod.rs
backend/fullstack-api/src/app/auth/: confirm_email.rs  login_user.rs  reset_password.rs  update_password.rs
backend/fullstack-api/src/app/user/: register_user.rs  update_user.rs
backend/fullstack-api/src/db/: app_repo.rs  user_repo.rs
backend/lib-api/: Cargo.toml
backend/lib-api/src/util/: json_extractor.rs
backend/lib-types/: Cargo.toml
tools/: skaffold.api.yaml
tools/k8s/ci/: Readme.md  build-all.sh
tools/k8s/ci/api/: api.k8s-config.yaml  api.k8s-deployment.yaml  api.k8s-service.yaml
tools/k8s/ci/db/: volume.yaml
tools/k8s/dev/api/: api.k8s-config.yaml  api.k8s-deployment.yaml  api.k8s-ingress.yaml  api.k8s-service.yaml
web/api-test/: package.json  vite.config.mts
web/backend-test/: package.json
web/backend-test/test/user/: get-user.spec.ts
web/fullstack-template/: .env.production  README.md  index.html  package.json
web/fullstack-template/src/: i18n.ts  main.ts  router.ts
web/fullstack-template/src/components/nav/: AppFooter.vue
web/fullstack-template/src/theme/css/: app.postcss
web/fullstack-template/src/util/config/: env.ts
web/fullstack-template/src/util/i18n/: index.ts
web/fullstack-template/src/views/: NotFoundPage.vue  PrivacyPage.vue  TermsPage.vue
