[workspace]

members = [
    "fullstack-api",
    "db-app",
    "api-test-helper",
    "lib-api",
    "lib-types",
]

[workspace.dependencies]
lib-api = { path = "./lib-api" }
lib-types = { path = "./lib-types" }
db-app = { path = "./db-app" }
aes = "0.8.4"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = "0.5.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
const_format = "0.2.34"
dotenvy = "0.15.7"
file-rotate = "0.8.0"
futures-util = { version = "0.3.31" }
lazy_static = "1.5.0"
jsonwebtoken = "9.3.1"
nu-ansi-term = "0.50.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
rusty-s3 = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_qs = "0.14.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "chrono"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.44.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3.10" }
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.dev]
opt-level = "z"
strip = true
